Add carousel in banner top

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -7,3 +7,6 @@
 @import '../fonts/font-awesome/css/font-awesome.min.css';
 @import '../fonts/icofont/icofont.min.css';
 @import '../fonts/WebFont/style.css';
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
+@import 'custom-react-slick.scss';
