--- a/components/Home/BannnerTop/Carousel/Carousel.module.scss
+++ b/components/Home/BannnerTop/Carousel/Carousel.module.scss
@@ -5,10 +5,40 @@
   cursor: pointer;
   user-select: none;
 }
+
 .slick_slide_image {
   max-width: 100%;
   height: 470px;
   border-radius: 8px;
   box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3),
     0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+}
+
+.custom_slick_dots {
+  position: absolute;
+  bottom: 40px;
+  display: flex;
+  margin: auto;
+  z-index: 10;
+  width: 16px;
+  height: 5px;
+  border-radius: 5px;
+  margin-right: 10px;
+  background-color: #ccc;
+  // li {
+  //   width: 16px;
+  //   height: 5px;
+  //   border-radius: 5px;
+  //   margin-right: 10px;
+  //   background-color: #999999;
+  //   z-index: 10;
+  //   border: none;
+  // }
+  // li.slick-active {
+  //   background-color: #ffba15;
+  // }
+}
+
+li.slick-active .custom_slick_dots {
+  background-color: #ffba15;
 }
