--- a/components/ProductDetail/SlideProduct/SlideProduct.module.scss
+++ b/components/ProductDetail/SlideProduct/SlideProduct.module.scss
@@ -8,12 +8,51 @@
 }
 
 .slick_slide_image_container {
-  height: inherit;
+  height: 100%;
 }
 
-.slick_slide_image {
-  max-width: 100%;
-  border-radius: 8px;
-  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3),
-    0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+.slide_container {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+.slick_slide_image_container {
+  width: 600px;
+  background-repeat: no-repeat;
+  .slick_slide_image {
+    display: block;
+    width: 100%;
+    pointer-events: none;
+    // pointer-events: none;
+    // transform-origin: center center;
+    // object-fit: cover;
+    // width: 100%;
+    // height: 100%;
+    // max-width: 100%;
+    // max-height: 100%;
+    // border-radius: 8px;
+    // box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3),
+    //   0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+    // margin: auto;
+  }
+  &:hover .slick_slide_image {
+    opacity: 0;
+  }
+}
+
+.custom_slick_dots {
+  position: absolute;
+  bottom: -4px;
+  width: 100px;
+  margin: 0 8px;
+}
+
+.slide_image {
+  height: 500px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transform-origin: center center;
+  transform: scale(1);
 }
