--- a/components/ProductDetail/SlideProduct/SlideProduct.module.scss
+++ b/components/ProductDetail/SlideProduct/SlideProduct.module.scss
@@ -8,22 +8,17 @@
 }
 
 .slick_slide_image_container {
-  height: 100%;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
-.slide_container {
-  display: flex;
-  justify-items: center;
-  align-items: center;
-}
-
-.slick_slide_image_container {
-  width: 600px;
-  background-repeat: no-repeat;
-  .slick_slide_image {
-    display: block;
-    width: 100%;
-    pointer-events: none;
+// .slick_slide_image_container {
+//   width: 600px;
+//   background-repeat: no-repeat;
+//   .slick_slide_image {
+//     display: block;
+//     width: 100%;
+//     pointer-events: none;
     // pointer-events: none;
     // transform-origin: center center;
     // object-fit: cover;
@@ -35,10 +30,21 @@
     // box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3),
     //   0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
     // margin: auto;
-  }
-  &:hover .slick_slide_image {
-    opacity: 0;
-  }
+  // }
+//   &:hover .slick_slide_image {
+//     opacity: 0;
+//   }
+// }
+
+.slick_slide_image {
+  height: 500px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transform-origin: center center;
+  transform: scale(1);
+  cursor: zoom-in;
+  transition: transform 0.6s ease-out, -webkit-transform 0.6s ease-out;
 }
 
 .custom_slick_dots {
@@ -46,13 +52,4 @@
   bottom: -4px;
   width: 100px;
   margin: 0 8px;
-}
-
-.slide_image {
-  height: 500px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  transform-origin: center center;
-  transform: scale(1);
 }
