--- a/components/ProductDetail/SlideProduct/SlideProduct.module.scss
+++ b/components/ProductDetail/SlideProduct/SlideProduct.module.scss
@@ -25,8 +25,29 @@
 }
 
 .custom_slick_dots {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 116px;
+  text-align: start;
+  li {
+    margin-right: 92px;
+  }
+}
+
+.custom_slick_container_dot {
   position: absolute;
-  bottom: -4px;
-  width: 100px;
-  margin: 0 8px;
+  display: block;
+  top: -2px;
+  left: -2px;
+  width: 115px;
+  height: 115px;
+}
+
+.custom_slick_image_dot {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
